fix: fixed bug on mobile view of nav bar, testing and deployment

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-.App {
-  /* text-align: center; */
-}
-
 
 
 body{
