--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -86,10 +86,10 @@ nav{
         display: none;
         position: absolute;
         left: 0;
-        top: 17vh;
+        top: 12vh;
         flex-direction: column;
         width: 100%;
-        height: calc(100vh - 10vh);
+        height: calc(100vh - 12vh);
         text-align: center;
         border-top: 1px solid #A02279;
         background-color: #FFFFFF;
@@ -141,11 +141,7 @@ nav{
         margin: 15px;
     }
 
-    .nav-links li{
-        margin: 0 .6rem ;
-    }
+    
 
-    .nav-btn{
-        /* margin-left: 1rem ; */
-    }
+    
 }
