--- a/src/Styles/navbarSecondary.css
+++ b/src/Styles/navbarSecondary.css
@@ -81,11 +81,8 @@
 }
 
 
-@media screen and (max-width: 1024px){
-    .secondary-nav-links{
-        grid-template-columns: repeat(4, auto);
-    }
-
+@media screen and (min-width: 1024px){
+    
     .location-setting{
         height: min-content;
     }
